Menu & Help Fixes
Changed some colors on menu and fixed horizontal scrolling issue on help

--- a/css/styleshelp.css
+++ b/css/styleshelp.css
@@ -12,6 +12,14 @@ border: 0;
     grid-template-areas: "navbar" "intro" "info" "form" "footer";
 }
 
+header {
+    grid-area: navbar;
+}
+
+footer {
+    grid-area: footer;
+}
+
 /* For intro section */
 
 .intro {
@@ -43,7 +51,6 @@ h1 {
     grid-area: info;
     font-family: "Bagle Fat One", system-ui;
     background-color: white;
-    width: 100%;
     color: #333;
     display: flex;
     flex-direction: column;
@@ -52,7 +59,6 @@ h1 {
 }
 
 .info h2 {
-    margin: 0;
     text-align: center;
     font-family: 'Sour Gummy', cursive;
 }
